[package]
name = "winston_http"
version = "0.1.0"
edition = "2021"

[dependencies]
logform = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
winston_proxy_transport = "0.2.0"
winston_transport = "0.4.0"

[dev-dependencies]
serde_json = "1.0.140"
